--- a/stage3-systemd-libressl/Dockerfile
+++ b/stage3-systemd-libressl/Dockerfile
@@ -1,6 +1,6 @@
 FROM scratch
 
-MAINTAINER geaaru <geaaru@gmail.com>
+LABEL maintainer="geaaru <geaaru@sabayonlinux.org>"
 
 ARG TARBALL=local
 ENV TARBALL ${TARBALL}
