--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -13,6 +13,9 @@ display_args_to_stdout = False
 
 forks          = 1
 
+show_output = True
+capture_output=False
+
 #system_warnings = True
 #fact_caching = memory
 
